--- a/Project/ui/sales_frame.ui
+++ b/Project/ui/sales_frame.ui
@@ -1,87 +1,180 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Minimal Qt Designer .ui XML for SalesFrame -->
 <ui version="4.0">
  <class>SalesFrame</class>
  <widget class="QWidget" name="SalesFrame">
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>1078</width>
+    <height>745</height>
+   </rect>
+  </property>
+  <layout class="QVBoxLayout" name="mainSalesLayout">
+   <property name="spacing">
+    <number>10</number>
+   </property>
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
-    <widget class="QLabel" name="saleLabel">
+    <widget class="QLabel" name="salesLabel">
      <property name="text">
       <string>Sales</string>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QTableWidget" name="saleTable">
-     <property name="columnCount">
-      <number>4</number>
-     </property>
+    <widget class="QTableWidget" name="salesTable">
      <property name="rowCount">
       <number>0</number>
      </property>
+     <property name="columnCount">
+      <number>5</number>
+     </property>
+     <column/>
+     <column/>
+     <column/>
+     <column/>
+     <column/>
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="addBtnLayout">
-     <item>
-      <widget class="QPushButton" name="vegBtn">
-       <property name="text">
-        <string>Veg</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="miscBtn">
-       <property name="text">
-        <string>Misc</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <widget class="QFrame" name="totalContainer">
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <layout class="QHBoxLayout" name="totalLayout">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="totalTitle">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Total:</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="totalValue">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>0.00</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
    </item>
-   <item>
-    <layout class="QHBoxLayout" name="totalLayout">
-     <item>
-      <widget class="QLabel" name="totalTitle">
-       <property name="text">
-        <string>Total:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="totalValue">
-       <property name="text">
-        <string>0.00</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="receiptLayout">
-     <item>
-      <widget class="QPushButton" name="cancelsaleBtn">
-       <property name="text">
-        <string>Cancel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="onholdBtn">
-       <property name="text">
-        <string>On Hold</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="viewholdBtn">
-       <property name="text">
-        <string>View Holds</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
+    <item>
+     <widget class="QFrame" name="addContainer">
+      <property name="frameShape">
+        <enum>QFrame::NoFrame</enum>
+      </property>
+      <property name="frameShadow">
+        <enum>QFrame::Plain</enum>
+      </property>
+      <layout class="QHBoxLayout" name="addBtnLayout">
+        <property name="spacing">
+         <number>20</number>
+        </property>
+        <item>
+         <widget class="QPushButton" name="vegBtn">
+          <property name="text">
+            <string>Add Vegetables</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="manualBtn">
+          <property name="text">
+            <string>Add Manual</string>
+          </property>
+         </widget>
+        </item>
+      </layout>
+     </widget>
+    </item>
+    <item>
+     <widget class="QFrame" name="receiptContainer">
+      <property name="frameShape">
+        <enum>QFrame::NoFrame</enum>
+      </property>
+      <property name="frameShadow">
+        <enum>QFrame::Plain</enum>
+      </property>
+      <layout class="QHBoxLayout" name="receiptLayout">
+        <property name="spacing">
+         <number>10</number>
+        </property>
+        <property name="topMargin">
+         <number>10</number>
+        </property>
+        <item>
+         <widget class="QPushButton" name="cancelsaleBtn">
+          <property name="text">
+            <string>Cancel</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="onholdBtn">
+          <property name="text">
+            <string>On Hold</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="viewholdBtn">
+          <property name="text">
+            <string>View Holds</string>
+          </property>
+         </widget>
+        </item>
+      </layout>
+     </widget>
+    </item>
   </layout>
  </widget>
  <resources/>
