--- a/Project/ui/sales_frame.ui
+++ b/Project/ui/sales_frame.ui
@@ -34,19 +34,35 @@
     </widget>
    </item>
    <item>
-    <widget class="QTableWidget" name="salesTable">
-     <property name="rowCount">
-      <number>0</number>
-     </property>
-     <property name="columnCount">
-      <number>5</number>
-     </property>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-    </widget>
+  <widget class="QTableWidget" name="salesTable">
+   <property name="rowCount">
+    <number>0</number>
+   </property>
+   <property name="columnCount">
+    <number>6</number>
+   </property>
+  <property name="alternatingRowColors">
+   <bool>true</bool>
+  </property>
+   <property name="editTriggers">
+    <set>QAbstractItemView::NoEditTriggers</set>
+   </property>
+   <property name="selectionBehavior">
+    <enum>QAbstractItemView::SelectRows</enum>
+   </property>
+   <property name="selectionMode">
+    <enum>QAbstractItemView::SingleSelection</enum>
+   </property>
+   <attribute name="verticalHeaderVisible">
+    <bool>false</bool>
+   </attribute>
+   <column/>
+   <column/>
+   <column/>
+   <column/>
+   <column/>
+   <column/>
+  </widget>
    </item>
    <item>
     <widget class="QFrame" name="totalContainer">
